--- a/frontend/src/components/nav.css
+++ b/frontend/src/components/nav.css
@@ -1,12 +1,25 @@
 .nav {
-    
-    font-size: 2em;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-shadow: #666 .05em .05em;
-    
-    text-align: left;
-    color: white;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
 
     background-color: #112D32;
     padding: 1% 1% 1% 10%;
+}
+
+.title {
+    font-size: 2em;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: white;
+    text-shadow: #666 .05em .05em;
+    text-align: left;
+    padding-right: 20%;
+    padding-top: 1%;
+
+    flex-grow: 2;
+}
+
+.test {
+    font-size: 1em;
+    flex-grow: 1;
 }
