--- a/frontend/src/components/button.css
+++ b/frontend/src/components/button.css
@@ -4,9 +4,11 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-shadow: #666 .05em .05em;
     
-    text-align: right;
+    text-align: center;
     color: white;
 
     background-color: red;
     padding: 1% 2% 1% 2%;
+
+    width: 100%;
 }
