--- a/frontend/src/components/nav.css
+++ b/frontend/src/components/nav.css
@@ -3,7 +3,7 @@
     flex-wrap: nowrap;
     flex-direction: row;
 
-    background-color: #112D32;
+    background-color: var(--primary-dark);
     padding: 1% 1% 1% 10%;
 }
 
@@ -11,7 +11,7 @@
     font-size: 2em;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
-    text-shadow: #666 .05em .05em;
+    text-shadow: var(--primary-dark) .05em .05em;
     text-align: left;
     padding-right: 20%;
     padding-top: 1%;
