--- a/frontend/src/components/button.css
+++ b/frontend/src/components/button.css
@@ -7,7 +7,7 @@
     text-align: center;
     color: white;
 
-    background-color: red;
+    background-color: var(--secondary-color); 
     padding: 1% 2% 1% 2%;
 
     width: 100%;
