--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,3 +1,18 @@
+:root {
+    --primary-color: #7DE0D1;
+    --secondary-color: #E0AC7E;
+    --primary-dark: #35665F;
+    --secondary-dark: #E0897E;
+    --neutral-light: #cab3a0;
+    --neutral-dark: #615348;
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 * {
     margin: 0;
+}
+
+body, #root {
+    min-height: 100vh;
 }
