--- a/frontend/src/components/ContentCard.css
+++ b/frontend/src/components/ContentCard.css
@@ -1,14 +1,24 @@
 
 .content-card {
-
-    border: 2px solid black;
+    border: 4px solid black;
+    border-radius: 1rem;
+    box-shadow: 0px 0px 10px #707070;
 
     margin-block: 0.5rem;
     margin-inline: 0.5rem;
-    padding-inline: 0.5rem;
-    padding-block: 0.75rem;
+
+    padding-inline: 1.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
 
     text-align: center;
+
+    font-size: 1.3rem;
+}
+
+.content-card:hover {
+    transition: 0.1s;
+    box-shadow: 0px 0px 15px #707070;
 }
 
 .content-card h2 {
