Moved router. Rearranged components for router compatibility. Rebuilt footer. Added about and contact pages.

--- a/frontend/src/components/footer.css
+++ b/frontend/src/components/footer.css
@@ -29,3 +29,13 @@
     background-color: var(--neutral-dark);
     color: var(--neutral-light);
 }
+
+.footer-link {
+    margin-inline: 0.5rem;
+    text-decoration: none;
+    color: white;
+}
+
+.footer-link:hover {
+    font-weight: bold;
+}
