--- a/frontend/src/components/Categories.css
+++ b/frontend/src/components/Categories.css
@@ -4,3 +4,13 @@
     width: 100%;
     height: 100%;
 }
+#categories-content {
+
+}
+#center {
+    padding: 5%;
+    
+}
+.react-icons {
+    vertical-align: middle;
+  }
