--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,3 +1,7 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
     --primary-color: #7DE0D1;
     --secondary-color: #E0AC7E;
