Updated filter component to handle naming better. Added react-hook-form.

--- a/frontend/src/components/SearchFilter.css
+++ b/frontend/src/components/SearchFilter.css
@@ -63,7 +63,7 @@
    margin-right: 0.25rem;
 }
 
-#filter-content > span > label {
+#filter-content > span > label:first-child {
    font-weight: 700;
 }
 
