--- a/frontend/src/components/Categories.css
+++ b/frontend/src/components/Categories.css
@@ -1,13 +1,17 @@
 #categories-content {
     border: 2px solid black;
-
-    width: 100%;
-    height: 100%;
+    position: fixed;
+    top: 10;
+    left: 0;
+    width: 15vw;
+    height: 85VH;
+    background-color: #ccc;
 }
 .category-content {
+    height: 7vh;
+    padding: 5%;
 }
 .category-content-title{
-    padding: 5%;
     text-align: center;
 }
 .react-icons {
