--- a/frontend/src/components/footer.css
+++ b/frontend/src/components/footer.css
@@ -5,6 +5,8 @@
     background-color: var(--primary-dark);
     color: var(--primary-color);
     width: 100%;
+    position: fixed;
+    bottom: 0;
 }
 
 .table {
