--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -2,6 +2,9 @@ header {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
+    position: sticky;
+    top: 0px;
+    z-index: 1;
 
     background-color: var(--primary-dark);
     padding: 1% 1% 1% 10%;
