--- a/frontend/src/components/Categories.css
+++ b/frontend/src/components/Categories.css
@@ -3,7 +3,7 @@
     position: fixed;
     top: 10;
     left: 0;
-    width: 15vw;
+    width: 15%;
     height: 90VH;
     background-color: lightgray;
 }
