new color for selected cat

--- a/frontend/src/components/Categories.css
+++ b/frontend/src/components/Categories.css
@@ -20,7 +20,7 @@
     padding: 1rem;
 }
 .category-selected{
-    background-color:#cbc6c6;
+    background-color:gray;
 }
 .react-icons {
     vertical-align: middle;
