--- a/frontend/src/pages/bill.css
+++ b/frontend/src/pages/bill.css
@@ -29,14 +29,18 @@
     margin: 5% 0% 5% 5%;
     padding: 2% 2% 2% 2%;
     border: 5px solid black;
-
-    /**Centers Vertically**/
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
 }
 
-#temp {
+.extend-button {
     grid-column: 1/3;
+}
+
+@media print {
+    .temp, header, footer, h1 {
+        display: none;
+    }
+
+    .main-content-bill {
+        display: block;
+    }
 }
