--- a/frontend/src/pages/index.css
+++ b/frontend/src/pages/index.css
@@ -13,3 +13,25 @@
     display: block;
     width: 50%;
 }
+
+#bottom-page {
+    width: 50%;
+    padding-left: 24%;
+    padding-bottom: 5%;
+}
+
+@media only screen and (max-width: 1000px) {
+    #bottom-page {
+        width: 50%;
+        padding-left: 24%;
+        padding-bottom: 8%;
+    }   
+}
+
+@media only screen and (max-width: 650px) {
+    #bottom-page {
+        width: 50%;
+        padding-left: 24%;
+        padding-bottom: 15%;
+    }   
+}
