--- a/frontend/src/components/ComponentCard.css
+++ b/frontend/src/components/ComponentCard.css
@@ -35,6 +35,11 @@
    height: auto;
 }
 
+img {
+   max-width: 100%;
+   max-height: 100%;
+}
+
 .component-content:hover {
    background-color: lightgray;
    width: 90%;
